--- a/src/assets/scss/utils/AModernCSSReset.scss
+++ b/src/assets/scss/utils/AModernCSSReset.scss
@@ -16,11 +16,11 @@ ol[class] {
 /* Remove default margin */
 /* Убираем внешние отступы */
 body,
-h1,
-h2,
-h3,
-h4,
-p,
+// h1,
+// h2,
+// h3,
+// h4,
+// p,
 ul[class],
 ol[class],
 figure,
@@ -28,6 +28,34 @@ blockquote,
 dl,
 dd {
     margin: 0;
+}
+ol,
+p,
+ul {
+    line-height: 1.5;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 500;
+    line-height: 1.4;
+}
+
+h1 {
+    font-size: 2.2rem;
+    font-weight: 600;
+}
+
+h2 {
+    font-size: 1.65rem;
+    padding-bottom: 0.3rem;
+}
+
+h3 {
+    font-size: 1.35rem;
 }
 
 /* Set core root defaults */
@@ -53,15 +81,13 @@ html {
 
 /* Set core body defaults */
 /* Выставляем основные настройки по-умолчанию для body */
-body {
-    min-height: 100vh;
-    text-rendering: optimizeSpeed;
-    line-height: 1.5;
-}
 //! добавил
 body {
     margin: 0;
     padding: 0;
+    // min-height: 100vh;
+    text-rendering: optimizeSpeed;
+    line-height: 1.5;
     // font-family: $mainFont;
     font-size: $mainFontSize;
     font-weight: $mainFontWeight;
@@ -87,6 +113,7 @@ li {
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a {
     text-decoration: none;
+    font-weight: 500;
 }
 a:not([class]) {
     text-decoration-skip-ink: auto;
@@ -108,7 +135,7 @@ article > * + * {
 /* Inherit fonts for inputs and buttons */
 /* Наследуем шрифты для инпутов и кнопок */
 input,
-button,
+// button,
 textarea,
 select {
     font: inherit;
@@ -146,6 +173,13 @@ section,
 }
 //====================================================================
 //! добавил
+hr {
+    margin: 1rem 0;
+}
+strong,
+.bold {
+    font-weight: 500;
+}
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -161,10 +195,11 @@ section,
 
 .container {
     width: 100%;
+    max-width: 1000px;
     flex: 0 0 auto;
     position: relative;
     margin: 0 auto;
-    max-width: $desktopWidth;
+    // max-width: $desktopWidth;  //!!!!! изменил контейнер max-width: 1000px; с 1280
     @media screen and (max-width: $smDesktopWidth) {
         max-width: $tableWidth;
     }
@@ -174,5 +209,216 @@ section,
     @media screen and (max-width: $phoneWidth) {
         max-width: $smPhoneWidth;
     }
+}
+//====================================================================
+// Style Butttons
+.btn {
+    color: #42b983;
+    position: relative;
+    place-content: center;
+    place-items: center;
+    width: fit-content;
+    border-radius: 99px;
+    letter-spacing: 0.05em;
+    border: 1px solid #42b983;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin-right: 10px;
+    padding: 0.5rem 1.5rem;
+    white-space: nowrap;
+    font-weight: 700;
+    outline: none;
+    background: #fff;
+    transition: all 0.22s;
+}
+
+.btn:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.btn:disabled {
+    cursor: not-allowed;
+    opacity: 1 !important;
+    background: #eee !important;
+    border-color: #ddd !important;
+    color: #999 !important;
+}
+
+.btn:active {
+    box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+.btn.primary {
+    background: #42b983;
+    color: #fff;
+}
+
+.btn.danger {
+    background: #e53935;
+    color: #fff;
+    border-color: #e53935;
+}
+
+.btn.warning {
+    background: #c25205;
+    color: #fff;
+    border-color: #c25205;
+}
+//====================================================================
+// Default styling classes
+// Стилизационные классы по умолчанию
+.pt-2 {
+    padding-top: 2rem;
+}
+
+.pt-1 {
+    padding-top: 1rem;
+}
+
+.pt-5 {
+    padding-top: 5rem;
+}
+
+.form-control {
+    position: relative;
+    margin-bottom: 0.5rem;
+}
+
+.form-control input,
+.form-control select {
+    margin: 0;
+    outline: none;
+    border: 2px solid #ccc;
+    display: block;
+    width: 100%;
+    color: #2c3e50;
+    padding: 0.5rem 1.5rem;
+    border-radius: 3px;
+    font-size: 1rem;
+}
+
+.form-control small {
+    color: #e53935;
+}
+
+.form-control.invalid input {
+    border-color: #e53935;
+}
+
+.form-checkbox {
+    margin-bottom: 1rem;
+}
+
+.form-checkbox .label {
+    display: block;
+    margin: 0 0 0.3rem 0.3rem;
+    font-weight: 500;
+}
+
+.form-checkbox .checkbox input {
+    margin-right: 1rem;
+}
+
+.form-control label {
+    display: block;
+    margin: 0 0 0.3rem 0.3rem;
+    font-weight: 500;
+}
+
+.form-control input:active,
+.form-control input:focus {
+    transition: border 0.22s;
+    border: 2px solid #42b983;
+}
+
+.card {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.2);
+    background: #fff;
+}
+
+.card.marked {
+    border: 4px solid #42b983;
+}
+
+.card.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.list-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 0;
+}
+
+.alert {
+    padding: 1rem 1.5rem;
+    border-left-width: 0.5rem;
+    border-left-style: solid;
+    margin: 1rem 0;
+    position: relative;
+    border-bottom-right-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+.alert.primary {
+    border-color: #42b983;
+    background-color: #f8f8f8;
+}
+
+.alert.danger {
+    border-color: #e53935;
+    background-color: #f8f8f8;
+}
+
+.alert.warning {
+    border-color: #c25205;
+    background-color: #f8f8f8;
+}
+
+.alert p {
+    color: #222;
+    line-height: 1.7;
+}
+
+.alert-title {
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: -0.4rem;
+    color: #222;
+}
+
+.modal {
+    position: fixed;
+    top: 60px;
+    width: 600px;
+    padding: 1rem;
+    background: #fff;
+    z-index: 1000;
+    left: 50%;
+    border-radius: 10px;
+    transform: translateX(-50%);
+    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.35);
 }
 //====================================================================
