--- a/src/assets/scss/utils/variables.scss
+++ b/src/assets/scss/utils/variables.scss
@@ -68,3 +68,7 @@ $color-bgModal: #2c2c2c; // цвет фона блока модального о
 // ===================================
 $color-footer: #f8f8f8; // фон футера
 $vs-code-color: #1e1e1e;
+
+// background: #536976;  /* fallback for old browsers */
+// background: -webkit-linear-gradient(to bottom, #292E49, #536976);  /* Chrome 10-25, Safari 5.1-6 */
+// background: linear-gradient(to bottom, #292E49, #536976); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
